Fix merge issue

--- a/libs/date/package.json
+++ b/libs/date/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@toast-ui/date",
+  "name": "@dan-ui/date",
   "version": "0.0.3",
   "description": "TOAST UI Components: A Date interface  which is extensible. It provides UTCDate, LocalDate, MomentDate.",
   "main": "dist/toastui-date.js",
