--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -30,7 +30,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - name: Install tuidoc
         run: |
-          npm install -g @toast-ui/doc
+          npm install -g @dan-ui/doc
         shell: bash
       - name: Build docs
         working-directory: ${{ env.WORKING_DIRECTORY }}
