--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
           npx playwright install --with-deps
       - name: Build storybook
         run: |
-          npm run storybook:build -w "@toast-ui/calendar"
+          npm run storybook:build -w "@dan-ui/calendar"
       - name: Run E2E test
         run: |
-         npm run test:playwright
+          npm run test:playwright
