--- a/apps/calendar/package.json
+++ b/apps/calendar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@toast-ui/calendar",
+  "name": "@dan-ui/calendar",
   "author": "NHN Cloud FE Development Lab <dl_javascript@nhn.com>",
   "version": "2.1.3",
   "main": "./dist/toastui-calendar.js",
