--- a/apps/react-calendar/package.json
+++ b/apps/react-calendar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@toast-ui/react-calendar",
+  "name": "@dan-ui/react-calendar",
   "version": "2.1.3",
   "license": "MIT",
   "description": "TOAST UI Calendar for React",
@@ -57,7 +57,7 @@
     "build:types": "rimraf types/ && tsc -p ./tsconfig.declaration.json"
   },
   "dependencies": {
-    "@toast-ui/calendar": "^2.1.3"
+    "@dan-ui/calendar": "^2.1.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.2",
