--- a/apps/vue-calendar/package.json
+++ b/apps/vue-calendar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@toast-ui/vue-calendar",
+  "name": "@dan-ui/vue-calendar",
   "description": "TOAST UI Calendar for Vue",
   "author": "NHN Cloud FE Development Lab <dl_javascript@nhn.com>",
   "version": "2.1.3",
@@ -55,7 +55,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@toast-ui/calendar": "^2.1.3"
+    "@dan-ui/calendar": "^2.1.3"
   },
   "devDependencies": {
     "@vue/cli": "^5.0.6",
