--- a/package.json
+++ b/package.json
@@ -51,17 +51,17 @@
   },
   "scripts": {
     "build": "npm run build --workspaces",
-    "build:calendar": "npm run build --workspace=@toast-ui/calendar",
-    "build:react": "npm run build --workspace=@toast-ui/react-calendar",
-    "build:vue": "npm run build --workspace=@toast-ui/vue-calendar",
-    "build:date": "npm run build --workspace=@toast-ui/date",
-    "build:calendar-storybook": "npm run storybook:build --workspace=@toast-ui/calendar",
-    "build:calendar:docs": "npm run docs:build --workspace=@toast-ui/calendar",
+    "build:calendar": "npm run build --workspace=@dan-ui/calendar",
+    "build:react": "npm run build --workspace=@dan-ui/react-calendar",
+    "build:vue": "npm run build --workspace=@dan-ui/vue-calendar",
+    "build:date": "npm run build --workspace=@dan-ui/date",
+    "build:calendar-storybook": "npm run storybook:build --workspace=@dan-ui/calendar",
+    "build:calendar:docs": "npm run docs:build --workspace=@dan-ui/calendar",
     "serve:storybook": "http-server ./apps/calendar/storybook-static",
     "install:date": "cd libs/date && npm install",
     "setup:date": "npm run install:date && npm run build:date",
     "lint": "npm run lint --workspaces",
-    "develop": "npm run develop --workspace=@toast-ui/calendar",
+    "develop": "npm run develop --workspace=@dan-ui/calendar",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:playwright": "playwright test",
